// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic version (N-API) 1`] = `
prisma               : placeholder
@prisma/client       : placeholder
Current platform     : placeholder
N-API Query Engine   : placeholder
Migration Engine     : placeholder
Introspection Engine : placeholder
Format Binary        : placeholder
Default Engines Hash : placeholder
Studio               : placeholder
`;

exports[`version basic version: BINARY 1`] = `
prisma               : placeholder
@prisma/client       : placeholder
Current platform     : placeholder
Query Engine         : placeholder
Migration Engine     : placeholder
Introspection Engine : placeholder
Format Binary        : placeholder
Default Engines Hash : placeholder
Studio               : placeholder
`;

exports[`version version with custom binaries (N-API) 1`] = `
prisma               : placeholder
@prisma/client       : placeholder
Current platform     : placeholder
N-API Query Engine   : placeholder
Migration Engine     : placeholder
Introspection Engine : placeholder
Format Binary        : placeholder
Default Engines Hash : placeholder
Studio               : placeholder
`;

exports[`version version with custom binaries 1`] = `
prisma               : placeholder
@prisma/client       : placeholder
Current platform     : placeholder
Query Engine         : placeholder
Migration Engine     : placeholder
Introspection Engine : placeholder
Format Binary        : placeholder
Default Engines Hash : placeholder
Studio               : placeholder
`;
